# OpenGLModelViewer

./: .gitignore  CMakeLists.txt  README.md
dependencies/Assimp/samples/SimpleTexturedOpenGL/: SimpleTexturedOpenGL.sln  UpgradeLog.htm
dependencies/Assimp/samples/SimpleTexturedOpenGL/SimpleTexturedOpenGL/: SimpleTexturedOpenGL.vcxproj
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui/: CMakeLists.txt
shaders/: chessboard.frag  chessboard.vert  mvp_diffuse.frag  mvp_diffuse.vert  mvp_diffuse_two_colors.frag  mvp_grid.frag  mvp_grid.vert  mvp_phong.frag  mvp_phong_texture.frag  mvp_plain_color.frag  mvp_plain_color.vert  mvp_skybox.frag  mvp_skybox.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt
src/core/: Application.cpp  Application.h  Delegate.h  Window.cpp  Window.h  main.cpp
src/gui/: FileDialog.cpp  FileDialog.h  gui.cpp  gui.h
src/pch/: pch.h
src/renderer/: Camera.cpp  Camera.h  CubeMap.cpp  CubeMap.h  DirectionalLight.h  ElementBuffer.cpp  ElementBuffer.h  FrameBuffer.cpp  FrameBuffer.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  RendererSettings.h  Shader.cpp  Shader.h  ShaderDataType.cpp  ShaderDataType.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  renderer.cpp  renderer.h
src/resource_management/: ResourceManager.cpp  ResourceManager.h
